@@ -40,63 +40,60 @@
 
   <build>
     <pluginManagement>
-    <plugins>
-      <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
-                <configuration>
-                  <release>16</release>
-                </configuration>
-      </plugin>
-  
-      <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-        		    <artifactId>maven-surefire-plugin</artifactId>
-		            <version>3.0.0-M5</version>
-                <configuration>
+      <plugins>
+        <plugin>
+                  <!--<groupId>org.apache.maven.plugins</groupId>-->
+                  <artifactId>maven-compiler-plugin</artifactId>
+                  <version>3.8.1</version>
+                  <configuration>
+                    <release>16</release>
+                  </configuration>
+        </plugin>
+        <plugin>
+                  <groupId>org.apache.maven.plugins</groupId>
+                  <artifactId>maven-surefire-plugin</artifactId>
+                  <version>3.0.0-M5</version>
+                  <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
+                    <argLine>
+                      --add-opens calendarApp.ui/calendarApp.ui=ALL-UNNAMED --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                    </argLine>
                 </configuration>
-	    </plugin>
+        </plugin>
+        <plugin>
+                <artifactId>maven-clean-plugin</artifactId>
+                <version>3.1.0</version>
+        </plugin>
+          <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
+        <plugin>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>3.0.2</version>
+        </plugin>
 
-      <plugin>
-              <artifactId>maven-clean-plugin</artifactId>
-              <version>3.1.0</version>
-      </plugin>
-        <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
-      <plugin>
-              <artifactId>maven-resources-plugin</artifactId>
-              <version>3.0.2</version>
-      </plugin>
-      <plugin>
-              <artifactId>maven-compiler-plugin</artifactId>
-              <version>3.8.0</version>
-      </plugin>
-
-      <!--maven plugin for running test-coverage with JaCoCo-->
-      <plugin>
-                <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.7</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>prepare-agent</goal>
-                        </goals>
-                    </execution>
-                    <!-- attached to Maven test phase -->
-                    <execution>
-                        <id>report</id>
-                        <phase>verify</phase>
-                        <goals>
-                            <goal>report</goal>
-                        </goals>
-                    </execution>
-                </executions>
-      </plugin>
-    </plugins>
-  </pluginManagement>
+        <!--maven plugin for running test-coverage with JaCoCo-->
+        <plugin>
+                  <groupId>org.jacoco</groupId>
+                  <artifactId>jacoco-maven-plugin</artifactId>
+                  <version>0.8.7</version>
+                  <executions>
+                      <execution>
+                          <goals>
+                              <goal>prepare-agent</goal>
+                          </goals>
+                      </execution>
+                      <!-- attached to Maven test phase -->
+                      <execution>
+                          <id>report</id>
+                          <phase>verify</phase>
+                          <goals>
+                              <goal>report</goal>
+                          </goals>
+                      </execution>
+                  </executions>
+        </plugin>
+      </plugins>
+    </pluginManagement>
   </build>
 
   <modules>
